--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,11 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2",
+        "php": "^7.1.8",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "3.4.*",
         "symfony/console": "3.4.*",
         "symfony/dotenv": "3.4.*",
